Redesign: v0.1 including tabs, scrolling behaviours and many refactors for handling toolbar and navigation views.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </provider>
 
         <activity
-            android:name=".ui.home.HomeActivity"
+            android:name=".ui.home.LandingActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTask">
 
