--- a/feature_addbutton/src/main/AndroidManifest.xml
+++ b/feature_addbutton/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name="com.github.barriosnahuel.vossosunboton.feature.addbutton.AddButtonActivity"
             android:label="@string/app_feature_addbutton_activity_label_dynamic_feature"
             android:launchMode="singleTask"
-            android:parentActivityName="com.github.barriosnahuel.vossosunboton.ui.home.HomeActivity"
+            android:parentActivityName="com.github.barriosnahuel.vossosunboton.ui.home.LandingActivity"
             android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
