--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,10 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 
     testImplementation 'androidx.test:core:1.2.0'
-    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation ('org.robolectric:robolectric:4.3.1'){
+        // https://github.com/robolectric/robolectric/issues/5245
+        exclude group: 'com.google.auto.service', module: 'auto-service'
+    }
 
     testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'io.mockk:mockk:1.9.3'
