--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         classpath 'com.google.firebase:perf-plugin:1.3.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72'
 
+        //noinspection GradleDependency
         classpath 'com.monits:static-code-analysis-plugin:2.6.12'
         classpath 'io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.7.4'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:1.0.2'
