Setup Android Lint to check dependencies too when running the :app module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ android {
         }
     }
 
+    lintOptions {
+        checkDependencies true
+    }
+
     dynamicFeatures = [":feature_addbutton"]
 
 }
