--- a/commons_android/build.gradle
+++ b/commons_android/build.gradle
@@ -24,6 +24,8 @@ android {
 dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
 
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+
     implementation 'com.jakewharton.timber:timber:4.7.1'
 }
