--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           command: ./gradlew app:build -x check -x lintVitalRelease -x uploadCrashlyticsMappingFileRelease
       - run:
           name: "Run App Bundle"
-          command: ./gradlew app:bundle
+          command: ./gradlew app:bundle -x uploadCrashlyticsMappingFileRelease
 workflows:
   version: 2.1
   "Pull Requests Workflow":
