--- a/commons_android/build.gradle
+++ b/commons_android/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply from: "$project.rootProject.projectDir/linters.gradle"
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 30
 
     defaultConfig {
