--- a/commons_file/build.gradle
+++ b/commons_file/build.gradle
@@ -3,6 +3,11 @@ apply plugin: 'kotlin-android'
 apply from: "$project.rootProject.projectDir/linters.gradle"
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 30
 
     defaultConfig {
