--- a/feature_addbutton/src/main/AndroidManifest.xml
+++ b/feature_addbutton/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.github.barriosnahuel.vossosunboton.feature.addbutton">
 
     <dist:module
@@ -17,7 +18,9 @@
             android:label="@string/app_feature_addbutton_activity_label_dynamic_feature"
             android:launchMode="singleTask"
             android:parentActivityName="com.github.barriosnahuel.vossosunboton.ui.home.LandingActivity"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+            tools:ignore="Instantiatable">
+            <!-- "Instantiatable" lint check turned off because it throws false-positives when upgrading to AGP v4.0.0: https://issuetracker.google.com/issues/160685104#comment4 -->
 
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
