--- a/linters.gradle
+++ b/linters.gradle
@@ -6,7 +6,7 @@ apply from: "$project.rootProject.projectDir/ktlint.gradle"
  * Configuration for `com.monits.staticCodeAnalysis` plugin
  */
 staticCodeAnalysis {
-    findbugs = false
+    spotbugs = true
     checkstyle = true
     pmd = true
     cpd = true
