--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,8 +95,10 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.1'
 
-    implementation 'com.google.firebase:firebase-core:18.0.0'
-    implementation 'com.google.firebase:firebase-perf:19.0.10'
+    implementation platform ('com.google.firebase:firebase-bom:26.1.0')
+
+    implementation 'com.google.firebase:firebase-core'
+    implementation 'com.google.firebase:firebase-perf'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
