--- a/commons_android/build.gradle
+++ b/commons_android/build.gradle
@@ -29,8 +29,9 @@ android {
 dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
 
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation platform ('com.google.firebase:firebase-bom:26.1.0')
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-analytics'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 }
