--- a/.github/workflows/deploy-release-candidate.yml
+++ b/.github/workflows/deploy-release-candidate.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Build Release Candidate
         run: ./gradlew assembleDebug
       - name: Upload Release Candidate
