--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,10 +110,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
 
     testImplementation 'androidx.test:core:1.3.0'
-    testImplementation ('org.robolectric:robolectric:4.5.1'){
-        // https://github.com/robolectric/robolectric/issues/5245
-        exclude group: 'com.google.auto.service', module: 'auto-service'
-    }
+    testImplementation 'org.robolectric:robolectric:4.5.1'
 
     testImplementation 'com.google.truth:truth:1.1'
     testImplementation 'io.mockk:mockk:1.10.2'
