--- a/feature_addbutton/src/main/AndroidManifest.xml
+++ b/feature_addbutton/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <application>
         <activity
             android:name="com.github.barriosnahuel.vossosunboton.feature.addbutton.AddButtonActivity"
+            android:exported="true"
             android:label="@string/app_feature_addbutton_activity_label_dynamic_feature"
             android:launchMode="singleTask"
             android:parentActivityName="com.github.barriosnahuel.vossosunboton.ui.home.LandingActivity"
