--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,10 +105,11 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
-
     debugImplementation 'com.facebook.flipper:flipper:0.136.0'
     debugImplementation 'com.facebook.soloader:soloader:0.10.3'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
+    debugImplementation 'com.facebook.flipper:flipper-leakcanary2-plugin:0.136.0'
 
     testImplementation 'junit:junit:4.13.2'
 
