--- a/feature_addbutton/src/main/AndroidManifest.xml
+++ b/feature_addbutton/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.github.barriosnahuel.vossosunboton.feature.addbutton">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <dist:module
         dist:instant="false"
