--- a/feature_addbutton/build.gradle
+++ b/feature_addbutton/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android-extensions'
 apply from: "$project.rootProject.projectDir/linters.gradle"
 
 android {
+    namespace 'com.github.barriosnahuel.vossosunboton.feature.addbutton'
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
