--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,7 +97,7 @@ dependencies {
 
     implementation platform ('com.google.firebase:firebase-bom:31.2.2')
 
-    implementation 'com.google.firebase:firebase-core'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-perf'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
